--- a/client/src/resources/default-layout.css
+++ b/client/src/resources/default-layout.css
@@ -27,7 +27,19 @@
     margin-top: 20px;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
+    border-bottom: 1px solid gray;
     padding: 15px;
+}
+
+.spinner{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% -50%);
+}
+
+.ant-spin-dot-item{
+    background-color: rgba(255, 255, 255, 0.496) !important;
 }
 
 @media screen and (max-width:700px) {
