added transaction route and displaying transactions

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@ body, html{
 }
 
 .primary{
-  background-color: #3AA6B9;
+  background-color: #1B6B93;
   padding: 5px 20px;
   color: rgba(255, 255, 255, 0.781);
   border: none;
