--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,4 +15,14 @@ body, html{
   color: rgba(255, 255, 255, 0.781);
   border: none;
   font-family: "Montserrat", sans-serif;
+  border-radius: 7px ;
+}
+
+.secondary{
+  background-color: transparent;
+  padding: 5px 20px;
+  color: rgba(255, 255, 255, 0.781);
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 7px ;
 }
